ghc-6.2/hslibs/win32/Win32Graphics2D_stub_ffi.h

extern void* prim_moveToEx(HDC arg1,int arg2,int arg3);
extern LONG access_prim_moveToEx_gc_res1(HsPtr);
extern LONG access_prim_moveToEx_gc_res2(HsPtr);
extern int access_prim_moveToEx_gc_failed(HsPtr);
extern void* access_prim_moveToEx_gc_failstring(HsPtr);
extern void* prim_lineTo(HDC arg1,int arg2,int arg3);
extern int access_prim_lineTo_gc_failed(HsPtr);
extern void* access_prim_lineTo_gc_failstring(HsPtr);
extern void* prim_polyline(HDC hdc,POINT * ps,int num_ps);
extern int access_prim_polyline_gc_failed(HsPtr);
extern void* access_prim_polyline_gc_failstring(HsPtr);
extern void* prim_polylineTo(HDC hdc,POINT * ps,int num_ps);
extern int access_prim_polylineTo_gc_failed(HsPtr);
extern void* access_prim_polylineTo_gc_failstring(HsPtr);
extern void* prim_polygon(HDC hdc,POINT * ps,int num_ps);
extern int access_prim_polygon_gc_failed(HsPtr);
extern void* access_prim_polygon_gc_failstring(HsPtr);
extern void* prim_polyBezier(HDC hdc,POINT * ps,int num_ps);
extern int access_prim_polyBezier_gc_failed(HsPtr);
extern void* access_prim_polyBezier_gc_failstring(HsPtr);
extern void* prim_polyBezierTo(HDC hdc,POINT * ps,int num_ps);
extern int access_prim_polyBezierTo_gc_failed(HsPtr);
extern void* access_prim_polyBezierTo_gc_failstring(HsPtr);
extern void* prim_fillRect(HDC arg1,LONG gc_arg2,LONG gc_arg3,LONG gc_arg4,LONG gc_arg5,HBRUSH arg3);
extern int access_prim_fillRect_gc_failed(HsPtr);
extern void* access_prim_fillRect_gc_failstring(HsPtr);
extern void* prim_frameRect(HDC arg1,LONG gc_arg2,LONG gc_arg3,LONG gc_arg4,LONG gc_arg5,HBRUSH arg3);
extern int access_prim_frameRect_gc_failed(HsPtr);
extern void* access_prim_frameRect_gc_failstring(HsPtr);
extern void* prim_invertRect(HDC arg1,LONG gc_arg2,LONG gc_arg3,LONG gc_arg4,LONG gc_arg5);
extern int access_prim_invertRect_gc_failed(HsPtr);
extern void* access_prim_invertRect_gc_failstring(HsPtr);
extern void* prim_rectangle(HDC arg1,int arg2,int arg3,int arg4,int arg5);
extern int access_prim_rectangle_gc_failed(HsPtr);
extern void* access_prim_rectangle_gc_failstring(HsPtr);
extern void* prim_roundRect(HDC arg1,int arg2,int arg3,int arg4,int arg5,int arg6,int arg7);
extern int access_prim_roundRect_gc_failed(HsPtr);
extern void* access_prim_roundRect_gc_failstring(HsPtr);
extern void* prim_ellipse(HDC arg1,int arg2,int arg3,int arg4,int arg5);
extern int access_prim_ellipse_gc_failed(HsPtr);
extern void* access_prim_ellipse_gc_failstring(HsPtr);