ghc-6.2/hslibs/win32/Win32Graphics2D.hs

module Win32Graphics2D
	where

import StdDIS
import Win32Types
import GDITypes
import Win32Bitmap


----------------------------------------------------------------
-- 2D graphics operations
----------------------------------------------------------------

moveToEx :: HDC -> Int32 -> Int32 -> IO POINT
moveToEx arg1 arg2 arg3 =
  prim_moveToEx arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_moveToEx_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_moveToEx_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_moveToEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_moveToEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return ((gc_res1,gc_res2)))
foreign import  ccall unsafe "Win32Graphics2D_stub_ffi.h prim_moveToEx" prim_moveToEx :: Addr -> Int32 -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_moveToEx_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_moveToEx_gc_res2 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_moveToEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_moveToEx_gc_failstring :: Addr -> IO (Addr)

lineTo :: HDC -> Int32 -> Int32 -> IO ()
lineTo arg1 arg2 arg3 =
  prim_lineTo arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_lineTo_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_lineTo_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Graphics2D_stub_ffi.h prim_lineTo" prim_lineTo :: Addr -> Int32 -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_lineTo_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_lineTo_gc_failstring :: Addr -> IO (Addr)

polyline :: HDC -> [POINT] -> IO ()
polyline hdc gc_arg1 =
  (marshall_listLenPOINT_ gc_arg1) >>= \ (gc_arg2) ->
  case gc_arg2 of { (ps,num_ps) ->
  prim_polyline hdc ps num_ps
  >>= \ gc_result ->
  access_prim_polyline_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_polyline_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))}
foreign import  ccall unsafe "Win32Graphics2D_stub_ffi.h prim_polyline" prim_polyline :: Addr -> Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_polyline_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_polyline_gc_failstring :: Addr -> IO (Addr)

polylineTo :: HDC -> [POINT] -> IO ()
polylineTo hdc gc_arg1 =
  (marshall_listLenPOINT_ gc_arg1) >>= \ (gc_arg2) ->
  case gc_arg2 of { (ps,num_ps) ->
  prim_polylineTo hdc ps num_ps
  >>= \ gc_result ->
  access_prim_polylineTo_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_polylineTo_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))}
foreign import  ccall unsafe "Win32Graphics2D_stub_ffi.h prim_polylineTo" prim_polylineTo :: Addr -> Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_polylineTo_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_polylineTo_gc_failstring :: Addr -> IO (Addr)

polygon :: HDC -> [POINT] -> IO ()
polygon hdc gc_arg1 =
  (marshall_listLenPOINT_ gc_arg1) >>= \ (gc_arg2) ->
  case gc_arg2 of { (ps,num_ps) ->
  prim_polygon hdc ps num_ps
  >>= \ gc_result ->
  access_prim_polygon_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_polygon_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))}
foreign import  ccall unsafe "Win32Graphics2D_stub_ffi.h prim_polygon" prim_polygon :: Addr -> Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_polygon_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_polygon_gc_failstring :: Addr -> IO (Addr)

polyBezier :: HDC -> [POINT] -> IO ()
polyBezier hdc gc_arg1 =
  (marshall_listLenPOINT_ gc_arg1) >>= \ (gc_arg2) ->
  case gc_arg2 of { (ps,num_ps) ->
  prim_polyBezier hdc ps num_ps
  >>= \ gc_result ->
  access_prim_polyBezier_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_polyBezier_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))}
foreign import  ccall unsafe "Win32Graphics2D_stub_ffi.h prim_polyBezier" prim_polyBezier :: Addr -> Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_polyBezier_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_polyBezier_gc_failstring :: Addr -> IO (Addr)

polyBezierTo :: HDC -> [POINT] -> IO ()
polyBezierTo hdc gc_arg1 =
  (marshall_listLenPOINT_ gc_arg1) >>= \ (gc_arg2) ->
  case gc_arg2 of { (ps,num_ps) ->
  prim_polyBezierTo hdc ps num_ps
  >>= \ gc_result ->
  access_prim_polyBezierTo_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_polyBezierTo_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))}
foreign import  ccall unsafe "Win32Graphics2D_stub_ffi.h prim_polyBezierTo" prim_polyBezierTo :: Addr -> Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_polyBezierTo_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_polyBezierTo_gc_failstring :: Addr -> IO (Addr)

-- ToDo: We ought to be able to specify a colour instead of the
-- Brush by adding 1 to colour number.

fillRect :: HDC -> RECT -> HBRUSH -> IO ()
fillRect arg1 gc_arg1 arg3 =
  case gc_arg1 of { (gc_arg2,gc_arg3,gc_arg4,gc_arg5) ->
  prim_fillRect arg1 gc_arg2 gc_arg3 gc_arg4 gc_arg5 arg3
  >>= \ gc_result ->
  access_prim_fillRect_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_fillRect_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))}
foreign import  ccall unsafe "Win32Graphics2D_stub_ffi.h prim_fillRect" prim_fillRect :: Addr -> Int32 -> Int32 -> Int32 -> Int32 -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_fillRect_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_fillRect_gc_failstring :: Addr -> IO (Addr)

frameRect :: HDC -> RECT -> HBRUSH -> IO ()
frameRect arg1 gc_arg1 arg3 =
  case gc_arg1 of { (gc_arg2,gc_arg3,gc_arg4,gc_arg5) ->
  prim_frameRect arg1 gc_arg2 gc_arg3 gc_arg4 gc_arg5 arg3
  >>= \ gc_result ->
  access_prim_frameRect_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_frameRect_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))}
foreign import  ccall unsafe "Win32Graphics2D_stub_ffi.h prim_frameRect" prim_frameRect :: Addr -> Int32 -> Int32 -> Int32 -> Int32 -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_frameRect_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_frameRect_gc_failstring :: Addr -> IO (Addr)

invertRect :: HDC -> RECT -> IO ()
invertRect arg1 gc_arg1 =
  case gc_arg1 of { (gc_arg2,gc_arg3,gc_arg4,gc_arg5) ->
  prim_invertRect arg1 gc_arg2 gc_arg3 gc_arg4 gc_arg5
  >>= \ gc_result ->
  access_prim_invertRect_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_invertRect_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))}
foreign import  ccall unsafe "Win32Graphics2D_stub_ffi.h prim_invertRect" prim_invertRect :: Addr -> Int32 -> Int32 -> Int32 -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_invertRect_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_invertRect_gc_failstring :: Addr -> IO (Addr)

rectangle :: HDC -> Int32 -> Int32 -> Int32 -> Int32 -> IO ()
rectangle arg1 arg2 arg3 arg4 arg5 =
  prim_rectangle arg1 arg2 arg3 arg4 arg5
  >>= \ gc_result ->
  access_prim_rectangle_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_rectangle_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Graphics2D_stub_ffi.h prim_rectangle" prim_rectangle :: Addr -> Int32 -> Int32 -> Int32 -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_rectangle_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_rectangle_gc_failstring :: Addr -> IO (Addr)

roundRect :: HDC -> Int32 -> Int32 -> Int32 -> Int32 -> Int32 -> Int32 -> IO ()
roundRect arg1 arg2 arg3 arg4 arg5 arg6 arg7 =
  prim_roundRect arg1 arg2 arg3 arg4 arg5 arg6 arg7
  >>= \ gc_result ->
  access_prim_roundRect_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_roundRect_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Graphics2D_stub_ffi.h prim_roundRect" prim_roundRect :: Addr -> Int32 -> Int32 -> Int32 -> Int32 -> Int32 -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_roundRect_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_roundRect_gc_failstring :: Addr -> IO (Addr)

ellipse :: HDC -> Int32 -> Int32 -> Int32 -> Int32 -> IO ()
ellipse arg1 arg2 arg3 arg4 arg5 =
  prim_ellipse arg1 arg2 arg3 arg4 arg5
  >>= \ gc_result ->
  access_prim_ellipse_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_ellipse_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Graphics2D_stub_ffi.h prim_ellipse" prim_ellipse :: Addr -> Int32 -> Int32 -> Int32 -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_ellipse_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Graphics2D_stub_ffi.h" access_prim_ellipse_gc_failstring :: Addr -> IO (Addr)
